--- a/projectmovie/public/index.html
+++ b/projectmovie/public/index.html
@@ -23,6 +23,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link rel="stylesheet" href="owl-carousel/owl.theme.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.20.0-alpha.1/antd.min.css"
+    integrity="sha512-gN4mdCs2/qEr+YWLq7at2EkwSTg8x7ULOK1mNAZHze3G740jTkjRS7VoF45uPQjP/Jm22xyWW5ZXfFJLGEi51A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../src/asset/font/fontawesome-webfont3e6e3e6e.woff">
   <title>React App</title>
 </head>
 
@@ -36,6 +43,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
+
 
 </body>
 
